fixed the alignment problem of lesson and about page title

--- a/styles.css
+++ b/styles.css
@@ -342,26 +342,19 @@ button{
     }
     #lesson-page-title, #about-page-title{
         position: relative;
-        display: flex;
-        justify-content: end;
-        align-items: center;
+        width: 100%;
         padding: 5px;
         text-align: right;
     }
     #lesson-menu, #close-menu, #about-menu{
         display: inline;
         position: absolute;
-        top: 2px;
+        top: 0;
         left: 2px;
-        box-shadow: 0 0 0 1px white;
-        padding: 1px;
         cursor: pointer;
         color:var(--theme-blue);
-        
     }
-    /* #close-menu{
-        z-index: 23;
-    } */
+
 }
 
 footer{
